@@ -15,6 +15,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javac.package>jdk.compiler/com.sun.tools.javac</javac.package>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>24.0.0</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -26,6 +33,14 @@
                     <compilerArgs>
                         <arg>--add-exports</arg>
                         <arg>${javac.package}.tree=JumboTrace</arg>
+                        <arg>--add-exports</arg>
+                        <arg>${javac.package}.api=JumboTrace</arg>
+                        <arg>--add-exports</arg>
+                        <arg>${javac.package}.util=JumboTrace</arg>
+                        <arg>--add-exports</arg>
+                        <arg>${javac.package}.code=JumboTrace</arg>
+                        <arg>--add-exports</arg>
+                        <arg>${javac.package}.jvm=JumboTrace</arg>
                     </compilerArgs>
                     <source>17</source>
                     <target>17</target>
